[metadata]

name = bayes
version = attr: bayes.version
author = BAM
author_email = joerg.unger@bam.de
description = Variational Bayes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BAMresearch/BayesianInference
project_urls =
    Bug Tracker = https://github.com/BAMresearch/BayesianInference/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    scipy
