[metadata]
name = bayem
version = attr: bayem.__version__
author = Annika Robens-Radermacher, Thomas Titscher
author_email = annika.robens-radermacher@bam.de, thomas.titscher@bam.de
description = Implementation and derivation of 'Variational Bayesian inference for a nonlinear forward model.' [Chappell et al. 2008] for arbitrary, user-defined model errors. 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
license_files = LICENSE

[options]
python_requires = >= 3.7
packages = find:
include_package_data = True
install_requires =
    numpy==1.21.1
    scipy==1.5.0
    tabulate

[options.extras_require]
tests =
    pytest
    coverage[toml]
    flake8
    imageio
    matplotlib
    hypothesis

docs =
    sphinx >=3, <5
    sphinx-rtd-theme
    doit
